--- a/aa.html
+++ b/aa.html
@@ -7,6 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Nguyen Thi Anh DUong</h1>
+  <div>
+    <h1>Login Form</h1>
+    <form action="auth" method="POST">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="submit">
+    </form>
+  </div>
 </body>
 </html>
